# apprun-demo

./: Dockerfile  Taskfile.yml  apprun-demo.code-workspace  mise.toml
.github/workflows/: build.yml  ci.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package.json  unocss.config.ts  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  index.tsx  types.ts
frontend/src/components/: TodoInput.tsx  TodoItem.tsx
